@@ -5,6 +5,10 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.math.NumberUtils;
 
 import com.google.common.base.Preconditions;
 import com.google.inject.Inject;
@@ -17,6 +21,7 @@ import io.mangoo.interfaces.MangooValidator;
  *
  */
 public class Form implements MangooValidator {
+    private static final String KEY_ERROR = "Key can not be null";
     private boolean submitted;
     private List<File> files = new ArrayList<File>();
     private Map<String, String> values = new HashMap<String, String>();
@@ -38,32 +43,147 @@ public class Form implements MangooValidator {
     public String getError(String fieldName) {
         return this.validator.hasError(fieldName) ? this.validator.getError(fieldName) : "";
     }
-
+    
+    /**
+     * Retrieves a form value corresponding to the name of the form element
+     * 
+     * @param key The name of the form element
+     * @return The value of the form or null if not present
+     */
     public String get(String key) {
+        Preconditions.checkNotNull(key, KEY_ERROR);
+        
         return this.values.get(key);
     }
+    
+    /**
+     * Retrieves an optional string value corresponding to the name of the form element
+     * 
+     * @param key The name of the form element
+     * @return Optional of String
+     */
+    public Optional<String> getString(String key) {
+        Preconditions.checkNotNull(key, KEY_ERROR);
+        
+        String value = this.values.get(key);
+        if (StringUtils.isNotBlank(value)) {
+            return Optional.of(value);
+        }
+            
+        return Optional.empty();
+    }
+    
+    /**
+     * Retrieves an optional boolean value corresponding to the name of the form element
+     * 
+     * 0 -> false
+     * 1 -> true
+     * "true" -> true
+     * "false" -> false
+     * 
+     * @param key The name of the form element
+     * @return Optional of Boolean
+     */
+    public Optional<Boolean> getBoolean(String key) {
+        Preconditions.checkNotNull(key, KEY_ERROR);
+        
+        String value = this.values.get(key);
+        if (StringUtils.isNotBlank(value)) {
+            if (("1").equals(value)) {
+                return Optional.of(Boolean.TRUE);
+            } else if (("true").equals(value)) {
+                return Optional.of(Boolean.TRUE);
+            } else if (("false").equals(value)) {
+                return Optional.of(Boolean.FALSE);
+            } else if (("0").equals(value)) {
+                return Optional.of(Boolean.FALSE);
+            }
+        }
+        
+        return Optional.empty();
+    }
+    
+    /**
+     * Retrieves an optional integer value corresponding to the name of the form element
+     * 
+     * @param key The name of the form element
+     * @return Optional of Integer
+     */
+    public Optional<Integer> getInteger(String key) {
+        Preconditions.checkNotNull(key, KEY_ERROR);
 
+        String value = this.values.get(key);
+        if (StringUtils.isNotBlank(value) && NumberUtils.isNumber(value)) {
+            return Optional.of(Integer.valueOf(value));
+        }
+        
+        return Optional.empty();
+    }
+    
+    /**
+     * Retrieves an optional double value corresponding to the name of the form element
+     * 
+     * @param key The name of the form element
+     * @return Optional of Double
+     */
+    public Optional<Double> getDouble(String key) {
+        Preconditions.checkNotNull(key, KEY_ERROR);
+        
+        String value = this.values.get(key);
+        if (StringUtils.isNotBlank(value) && NumberUtils.isNumber(value)) {
+            return Optional.of(Double.valueOf(value));
+        }
+        
+        return Optional.empty();
+    }
+    
+    /**
+     * Retrieves an optional float value corresponding to the name of the form element
+     * 
+     * @param key The name of the form element
+     * @return Optional of Float
+     */
+    public Optional<Float> getFloat(String key) {
+        Preconditions.checkNotNull(key, KEY_ERROR);
+        
+        String value = this.values.get(key);
+        if (StringUtils.isNotBlank(value) && NumberUtils.isNumber(value)) {
+            return Optional.of(Float.valueOf(value));
+        }
+        
+        return Optional.empty();
+    }
+
+    /**
+     * Retrieves all attachment files of the form
+     * 
+     * @return List of files or an empty list
+     */
     public List<File> getFiles() {
         return this.files;
     }
 
-    public File getFile() {
-        File file = null;
+    /**
+     * Retrieves a single file of the form. If the the form
+     * has multiple files, the first will be returned
+     * 
+     * @return File or null if no file is present
+     */
+    public Optional<File> getFile() {
         if (!this.files.isEmpty()) {
-            file = this.files.get(0);
+            return Optional.of(this.files.get(0));
         }
 
-        return file;
+        return Optional.empty();
     }
-
-    public void addFile(File file) {
-        this.files.add(file);
-    }
-
-    public String getValue(String fieldName) {
-        return this.values.get(fieldName);
-    }
-
+    
+    /**
+     * Retrieves all form submitted values where the key of the map
+     * corresponds to the name of the form element and the value is
+     * the value of the form element
+     * 
+     * @return Map with Key-Value elements or empty map 
+     */
     public Map<String, String> getValues() {
         return this.values;
     }
@@ -72,6 +192,10 @@ public class Form implements MangooValidator {
         return submitted;
     }
 
+    public void addFile(File file) {
+        this.files.add(file);
+    }
+    
     public void setSubmitted(boolean submitted) {
         this.submitted = submitted;
     }
