@@ -4,6 +4,7 @@
 
 [small]#Released at xx.xx.xxxx#
 
+* https://github.com/svenkubiak/mangooio/issues/76[#76] Improved handling of values in forms (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/77[#77] Added option for adding custom cookies (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/75[#75] Fixed bug that did not handle remember in authentication correctly (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/74[#74] Refactored test utilities (svenkubiak)
